# advent_of_code

./: .gitignore  README.md  mise.toml  pyproject.toml
2015/01/: solver.py
2015/02/: solver.py
2015/03/: solver.py
2015/04/: solver.py
2015/05/: solver.py
2015/06/: solver.py
2015/07/: solver.py
2015/08/: solver.py
2015/09/: solver.py
2015/10/: solver.py
2015/11/: solver.py
2015/12/: solver.py
2015/13/: solver.py
2015/14/: solver.py
2015/15/: solver.py
2015/16/: solver.py
2015/17/: solver.py
2015/18/: solver.py
2015/19/: solver.py
2020/: 1.py
2020/01/: 1.pl  1.py  oneline.py  solver.py
2020/02/: 2.pl  2.py  oneline.py  solver.py
2020/03/: oneline.py  solver.pl  solver.py
2020/04/: oneline.py  solver.pl  solver.py
2020/05/: oneliner.py  solver.py
2020/06/: oneliner.py  solver.py
2020/07/: part1.py  part2.py  solver.py
2020/08/: solver.py
2020/09/: solver.py
2020/1/: 1.pl  input
2020/10/: solver.py
2020/11/: solver.py
2020/12/: solver.py
2020/13/: solver.py
2020/14/: solver.py
2020/15/: solver.py
2020/16/: solver.py
2020/17/: solver.py
2020/18/: solver.py
2020/19/: solver.py
2020/20/: solver.py  solver2.py
2020/21/: o.txt  solver.py
2020/22/: solver.py
2020/23/: solver.py
2020/24/: solver.py
2020/25/: solver.py
2020/day_2/: 2.py
2021/01/: solver.pl  solver.py
2021/02/: oneliner.py  solver.py
2021/03/: good_solver.py  solver.py
2021/04/: solver.py
2021/05/: solver.py
2021/06/: solver.py
aoc-cli/: server_actions.py
aoc_functionality/: __init__.py  grid_helper.py  util.py
(+118 files in other folders)
